# nuscenes-devkit-cpp

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  data  nuscenes_tutorial.ipynb  pytest.ini
.github/workflows/: ci.yaml
include/: Annotation.hpp  Attribute.hpp  CalibratedSensor.hpp  Category.hpp  EgoPosition.hpp  Instance.hpp  Log.hpp  Map.hpp  NuScenes.hpp  Nuscenes.hpp  Record.hpp  RecordDumper.hpp  RecordVisitor.hpp  Rotation.hpp  Sample.hpp  SampleData.hpp  Scene.hpp  Sensor.hpp  Translation.hpp  Visibility.hpp  attribute.hpp  enums.hpp
src/: Annotation.cpp  Attribute.cpp  CalibratedSensor.cpp  Category.cpp  EgoPosition.cpp  Instance.cpp  Log.cpp  Map.cpp  NuScenes.cpp  Nuscenes.cpp  Record.cpp  RecordDumper.cpp  RecordVisitor.cpp  Rotation.cpp  Sample.cpp  SampleData.cpp  Scene.cpp  Sensor.cpp  Translation.cpp  Visibillity.cpp  main.cpp
tests/: test_annotation.py  test_attribute.py  test_basic.py  test_calibrated_sensor.py  test_category.py  test_egopose.py  test_instance.py  test_load.py  test_log.py  test_map.py  test_rotation.py  test_sample.py  test_sample_data.py  test_scene.py  test_sensor.py  test_translation.py  test_visibility.py
